# MasterApplication

./: .prettierrc.js  CMakeLists.txt  MasterApplication.cpp  MasterApplication.cs  TextInBlocks.java  bookmark_merger.html  createEmptyDirsGithub.ps1  dirStruct.json  dirscan.sh  index.html
MasterApplication/: MasterApplication.h
assets/js/: colorUtil.js  main.js  maths.ts  util.js  wishlistExtractor.js
assets/scripts/: CleanupFilename.ps1  IsTheSharedFileOpen.ps1  MoveLargeFile.ps1  PurgeEmptyDirectory.ps1  merge.php  syncFolders.ps1
output/: file.txt
test/: file.txt
